--- a/Client/Pages/FormTemplate.razor
+++ b/Client/Pages/FormTemplate.razor
@@ -16,7 +16,7 @@
 </div>
 
 @code {
-    [Parameter] public FormData FormData { get; set; } = new();
+    [Parameter] public FormData FormData { get; set; }
     // [Parameter] public string? InputValue { get; set; }
     // [Parameter] public DateTime SelectedDate { get; set; }
     // [Parameter] public string? SelectedOption { get; set; }
