--- a/Client/Pages/Parent3.razor
+++ b/Client/Pages/Parent3.razor
@@ -1,4 +1,5 @@
-﻿@page "/parent-3"
+﻿@* https://learn.microsoft.com/en-us/aspnet/core/blazor/components/data-binding?view=aspnetcore-6.0#bound-field-or-property-expression-tree *@
+@page "/parent-3"
 
 <PageTitle>Parent 3</PageTitle>
 
