Add nested component example

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using BlazorWasm1.Client
 @using BlazorWasm1.Client.Pages
 @using BlazorWasm1.Client.Shared
+@using BlazorWasm1.Shared;
 
 @using static BlazorWasm1.Client.Shared.Dialog
 
