--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -7,9 +7,10 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using BlazorWasm1.Client
+@using BlazorWasm1.Client.Mappings
 @using BlazorWasm1.Client.Pages
 @using BlazorWasm1.Client.Shared
-@using BlazorWasm1.Shared;
+@using BlazorWasm1.Shared
 
 @using static BlazorWasm1.Client.Shared.Dialog
 
